--- a/src/popup.html
+++ b/src/popup.html
@@ -8,6 +8,7 @@
   </head>
   <body>
     <div id="root"></div>
+    <script type="module" src="/node_modules/webextension-polyfill/dist/browser-polyfill.min.js"></script>
     <script type="module" src="/popup.tsx"></script>
   </body>
 </html>
